css/style.css
/* ... */
  
  .menu-toggle:hover .burger:before,
  .menu-toggle:hover .burger:after,
  .menu-toggle:active .burger:before,
  .menu-toggle:active .burger:after,
  .menu-toggle:focus .burger:before,
  .menu-toggle:focus .burger:after{
	  width: 18px;
  }
  
  .menu-toggle {
	  padding: 20px 8px 8px;
  }
  
  .site-branding {
	  display: flex;
	  justify-content: space-between;
	  align-items: center;
	  padding: 10px 15px;
	  position: fixed;
	  top: 0;
	  left: 0;
	  width: 100%;
		  background: #fff;
		  z-index: 111;
  }
  
  #main-nav {
	  position: fixed;
	  background: rgba(0, 130, 250, 0.96);
	  right: 0;
	  left: 0;
	  top: 60px;
	  bottom: 0;
	  opacity: 0;
	  visibility: hidden;
	  overflow: hidden;
	  z-index: 111;
	  transition: all 0.3s ease;
	  display: flex;
	  flex-direction: column;
	  justify-content: space-between;
	  align-items: center;
		  min-height: calc(100vh - 60px);
  }
  
  #main-nav.toggled {
	  opacity: 1;
	  visibility: visible;
	  overflow: visible;
  }
  
  #masthead {
	  padding: 60px 0 0;
  }
  
  .nav-menu {
	  padding: 0;
	  margin: 0;
	  list-style-type: none;
	  display: flex;
	  flex-direction: column;
	  justify-content: space-around;
	  align-items: center;
  }
  
  .site-navigation .nav-menu a{
	  font-family: 'Raleway', sans-serif;
	  font-style: normal;
	  font-weight: bold;
	  font-size: 40px;
	  text-align: center;
  
	  color: #FFFFFF;
	  text-decoration: none;
  }
  
  .site-navigation .nav-menu .current_page_item  a{
	  text-decoration: underline;
  }
  
  .site-navigation .nav-menu li {
	  margin: 10px 0;
  }
  
  .phoneMobileMenu {
	  font-family: 'Raleway', sans-serif;
	  font-style: normal;
	  font-weight: bold;
	  font-size: 30px;
	  text-align: center;
	  color: #FFFFFF;
	  text-decoration: none;
		  margin-bottom: 50px;
  }
  
  .phoneIconMenu{
	  width: 34px;
	  height: 30px;
	  display: flex;
	  justify-content: center;
	  align-items: center;        
  }
  
  .logo {
	  display: flex;
	  justify-content: center;
	  align-items: center;
  }
  
  *{
	 -webkit-font-feature-settings: "lnum";
  -moz-font-feature-settings: "lnum";
  font-feature-settings: "lnum";  
  }
  
  .post, .page {
	  margin: 0;
  }
  
  #colophon {
	  background-image: url("/wp-content/themes/snami/img/footerBG.png");
	  background-size: cover;
	  background-position: center top;
	  padding: 60px 0 55px;
  }
  
  .titleFooter{
	  font-family: Raleway;
	  font-style: normal;
	  font-weight: bold;
	  line-height: normal;
	  font-size: 22px;
	  text-align: center;
	  text-transform: uppercase;
  
	  color: #FFFFFF;
  }
  
  .site-info a {
	  font-family: Roboto;
	  font-style: normal;
	  font-weight: 500;
	  line-height: normal;
	  font-size: 18px;
	  text-transform: uppercase;
	  text-align: center;
	  color: #FFFFFF;
	  text-decoration: none;
  }
  
  .Yura {
	  font-family: Roboto;
	  font-style: normal;
	  font-weight: 200;
	  line-height: normal;
	  font-size: 20px;
	  color: #FFFFFF;
	  margin: 9px 0 40px;
  }
  
  .site-info {
	  display: flex;
	  flex-direction: column;
	  justify-content: center;
	  align-items: center;
  }
  
  .social {
	  width: 250px;
	  margin: 0 auto;
	  display: flex;
	  justify-content: space-around;
	  align-items: center;
  }
  
  
  .page-template-template-glavnaya #content{
	  height: calc(100% - 60px);
	  margin-top: 60px;
  }
  .owl-dots {
	  display: none;
  }

  .slide {
	  height: 100%;
	  background-size: cover;
	  background-position: center top;
	  padding: 35px;
	  display: flex;
	  flex-direction: column;
	  justify-content: flex-end;
	  align-items: flex-start;
  }
  
  .title1 {
	  font-family: Pacifico;
	  font-style: normal;
	  font-weight: normal;
	  line-height: normal;
	  font-size: 18px;
	  margin: 6px 0 6px;
	  color: #FFFFFF;
  }
  
  .slide .price {
	  font-family: Open Sans Condensed;
	  line-height: normal;
	  font-size: 26px;
	  background: #FF3333;
	  border-radius: 50px;
	  color: #FFFFFF;
	  padding: 1px 19px;
	  margin: 0;
  }
/*   
  .slide .title2 {
	font-family: Raleway;
	font-style: normal;
	font-weight: bold;
	line-height: 42px;
	font-size: 40px;
	margin: 0;
	color: #FFFFFF;
  } */

  .slide .title2 {
	font-family: Raleway;

	font-style: normal;
	font-weight: bold;
	font-size: 30px;
	line-height: 35px;

	margin: 0 0 10px;
	color: #FFFFFF;
  }
  
  .slide .time {
	font-family: Raleway;
	font-style: normal;
	font-weight: 500;
	line-height: 12px;
	font-size: 15px;
	text-align: left;
	margin: 0 0 30px;
	color: #FFFFFF;
  }
  
  .menu-main-container {
	  margin-top: 4vh;
  }
  
  
  body .iWant {
	  font-family: Roboto;
	  font-style: normal;
	  font-weight: 500;
	  line-height: normal;
	  font-size: 14px;
	  text-align: center;
	  text-transform: uppercase;
	  color: #FFFFFF;
	  background: none;
	  border: 1px solid #fff;
	  border-radius: 3px;
	  padding: 10px 35px;
		  text-decoration: none;
  }
  
  .placesLeft {
	  position: absolute;
	  right: 0;
	  bottom: 0;
	  height: auto !important;
	  display: flex;
	  justify-content: center;
	  align-items: flex-start;
	  /* padding: 25px 15px 15px; */
	  padding: 25px 10px 15px 30px;
	  font-family: Raleway;
	  font-style: normal;
	  font-weight: normal;
	  line-height: 11px;
	  font-size: 12px;
	  color: #FFFFFF;
	  flex-direction: column;
  }
  
  .placesLeft span{
	  z-index: 2;
  }
  .placesLeft span span{
	  font-weight: bold;
	  display: block;
	  margin: 7px 0 0;
		  font-size: 18px;
  }
  
  body .tourSelectButton {
	  font-family: Roboto;
	  font-style: normal;
	  font-weight: 500;
	  line-height: normal;
	  font-size: 14px;
	  text-align: center;
	  text-transform: uppercase;
	  border-radius: 3px;
	  color: #FFFFFF;
	  border: none;
	  margin-top: 20px;
	  padding: 13px 22px;
		  text-decoration: none;
		  background: #0082FA;
  }
  
  .placesLeft .svg {
	position: absolute;
	right: 0;
	top: 0;
	fill: #000;
  }

  .placesLeft .bg_free_places {
	position: absolute;
	right: 0;
	bottom: 0;
	/* width: 99px; */
	/* height: 88px; */
  }
/* ... */

